<resources>
    <string name="app_name">Communect</string>
    <string name="main_heading_inspirationalquote">Let\'s change something!</string>
    <string name="main_title">Welcome to Communect!</string>
    <string name="community_forum_button">Talk with your community</string>
    <string name="view_reports_button_label">View your reports</string>
    <string name="view_all_reports_button_label">View all reports in your local area</string>
    <string name="report_button_label">Make a report</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last name</string>
    <string name="personal_info_quirky_message">Who are you?</string>
    <string name="profile_picture_access_hint">Profile picture</string>
    <string name="detail_hint_label">What happened?</string>
    <string name="make_report_location_hint_label">An approximate location of the report</string>
    <string name="report_picture_hint">A picture of the report</string>
    <string name="upload_report_image_access_hint">Picture to upload</string>
    <string name="auto_set_location_hint_access">Automatically set your location using GPS</string>
    <string name="send_to_server_button_label">send</string>
    <string name="contentDescriptionthumbnail">thumbnail</string>
    <string name="Title_view_all_reports">Viewing all reports in your area</string>
    <string name="display_notification">Button</string>
    <string name="Channel_name">channel name</string>
    <string name="refresh_reports_label">Refresh</string>
</resources>
