<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/make_a_report_button"
        android:layout_width="184dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/report_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/view_reports_all_button"
        android:layout_width="184dp"
        android:layout_height="150dp"
        android:layout_marginStart="208dp"
        android:layout_marginBottom="188dp"
        android:text="@string/view_all_reports_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/view_your_reports_button"
        android:layout_width="184dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="188dp"
        android:text="@string/view_reports_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/community_forum_button"
        android:layout_width="184dp"
        android:layout_height="150dp"
        android:layout_marginStart="208dp"
        android:layout_marginBottom="16dp"
        android:text="@string/community_forum_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_main_heading"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="455dp"
        android:text="@string/main_heading_inspirationalquote"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/make_a_report_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_main_title" />
</androidx.constraintlayout.widget.ConstraintLayout>