<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeReport">

    <EditText
        android:id="@+id/make_report_description_toUpload"
        android:layout_width="344dp"
        android:layout_height="286dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/detail_hint_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="13dp"
        android:text="@string/detail_hint_label"
        app:layout_constraintBottom_toTopOf="@+id/make_report_description_toUpload"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/location_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/location_make_report_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:text="@string/make_report_location_hint_label"
        app:layout_constraintBottom_toTopOf="@+id/location_field"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/auto_set_location"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginEnd="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location_pin"
        android:contentDescription="@string/auto_set_location_hint_access" />

    <ImageView
        android:id="@+id/uploaded_report_image"
        android:layout_width="354dp"
        android:layout_height="249dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_upload_svgrepo_com"
        android:contentDescription="@string/upload_report_image_access_hint" />

    <TextView
        android:id="@+id/report_picture_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/report_picture_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>